--- a/style.css
+++ b/style.css
@@ -1,25 +1,59 @@
-
-
-
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to bottom, rgb(247, 223, 238), rgb(228, 165, 207), rgb(228, 98, 178), rgb(170, 24, 138));
-    text-align: center;
-    color: rgb(14, 13, 13);
-    
+    background-color: #fde2e5;
 }
 
-.texto 
-img {
-    border-radius: 80px;
+.container-header img {
+    width: 100%;
 }
 
-.link
-img{
-    width: 45px;
-    border-radius: 100px;
-    border: 0;
-    display: inline-block;
-    
+.container-main {
+    width: 900px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid #f8949f;
+    border-radius: 20px;
+    transform: translateY(-30%);
+    background-color: #fafafa;
 }
 
+.container-perfil .img-perfil img {
+    height: 250px;
+    border-radius: 30px;
+    padding: 5px;
+    margin: 20px;
+}
+
+.container-main .container-text {
+    height: 200px;
+    max-width: 200px;
+  background-color: #f8949f;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  
+}
+
+.container-perfil .container-text h1 {
+    max-width: 200px;
+    flex-wrap: wrap;
+
+}
+
+.container-perfil .container-text p {
+    max-width: 200px;
+}
+
+.container-links {
+    height: 240px;
+    max-width: 200px;
+    padding: 0 50px 0 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f8949f;
+}
