--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     background-color: #fde2e5;
 }
@@ -10,50 +12,78 @@ body {
     width: 900px;
     margin: 0 auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     gap: 10px;
     border: 1px solid #f8949f;
-    border-radius: 20px;
+    border-radius: 30px;
     transform: translateY(-30%);
     background-color: #fafafa;
+    padding: 30px;
 }
 
 .container-perfil .img-perfil img {
     height: 250px;
-    border-radius: 30px;
-    padding: 5px;
-    margin: 20px;
+    width: 280px;
+    border-radius: 50px;
+    object-fit: cover;
 }
 
 .container-main .container-text {
     height: 200px;
     max-width: 200px;
-  background-color: #f8949f;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 20px;
-  
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 15px;
+    word-wrap: break-word;
 }
 
-.container-perfil .container-text h1 {
-    max-width: 200px;
-    flex-wrap: wrap;
-
+.container-main .container-text h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
 }
 
-.container-perfil .container-text p {
-    max-width: 200px;
-}
+.container-main .container-text p {}
 
-.container-links {
+.container-main .container-links {
     height: 240px;
-    max-width: 200px;
-    padding: 0 50px 0 50px;
+    word-wrap: break-word;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f8949f;
+    gap: 50px;
+    margin-top: 10px;
+}
+
+.container-main .container-links h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.container-main .container-links ul {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 50px;
+}
+
+.container-main .container-links ul li {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.container-main .container-links ul li a {
+    color: black;
+}
+
+.container-main .container-links ul li a:hover {
+    color: rgb(54, 54, 54);
+}
+
+.container-main .container-links ul li img {
+    height: 50px;
 }
